[project]
name = "heliox-worker"
version = "1.0.0"
description = "Background worker for Heliox Gateway"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.6",
    "redis>=5.0.1",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
